<resources>
    <string name="app_name">Covid Track</string>
    <string name="app_description">COVID-19 cases</string>
    <string name="country">Country:</string>
    <string name="recovered">Recovered</string>
    <string name="confirmed">Confirmed</string>
    <string name="death">Death</string>
    <string name="active">Active</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="all">All</string>
    <string name="value">0</string>
    <string name="date" />
</resources>