<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/selectCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/country"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Country" />

    <org.angmarch.views.NiceSpinner
        android:id="@+id/spinnerSelect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@id/selectCountry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/selectCountry"
        app:layout_constraintTop_toTopOf="@id/selectCountry"
        app:popupTextAlignment="start" />

    <RadioGroup
        android:id="@+id/valueSelection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectCountry">

        <RadioButton
            android:id="@+id/radioConfirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmed" />

        <RadioButton
            android:id="@+id/radioActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active" />

        <RadioButton
            android:id="@+id/radioRecovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recovered" />

        <RadioButton
            android:id="@+id/radioDeath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/death" />

    </RadioGroup>

    <com.robinhood.spark.SparkView
        android:id="@+id/sparkView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:background="@color/colorBackground"
        app:layout_constraintBottom_toTopOf="@+id/timeSelection"
        app:layout_constraintTop_toBottomOf="@+id/valueSelection" />

    <RadioGroup
        android:id="@+id/timeSelection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:paddingBottom="8dp"
        android:background="@color/colorBackground"
        app:layout_constraintBottom_toTopOf="@+id/valueTicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/week" />

        <RadioButton
            android:id="@+id/radioMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month" />

        <RadioButton
            android:id="@+id/radioAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all" />
    </RadioGroup>

    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/date"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Jan 1, 2020" />

    <com.robinhood.ticker.TickerView
        android:id="@+id/valueTicker"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/value"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dateLabel"
        tools:text="4,3543" />

</androidx.constraintlayout.widget.ConstraintLayout>